# ai-book-translate

./: .gitignore  README.md  book_translate.py  chunk_book.py  inferno_translate.py  pyproject.toml
book_output/old_dragonbeard_english/: chunk_01.context.md  chunk_01.md  chunk_02.context.md  chunk_02.md  chunk_03.context.md  chunk_03.md  chunk_04.context.md  chunk_04.md  chunk_05.context.md  chunk_05.md  chunk_06.context.md  chunk_06.md  chunk_07.context.md  chunk_07.md  chunk_08.md  index.json  story_so_far.md
book_output/the_monkeys_paw_genz/: chunk_01.context.md  chunk_01.md  chunk_02.context.md  chunk_02.md  chunk_03.context.md  chunk_03.md  chunk_04.context.md  chunk_04.md  chunk_05.context.md  chunk_05.md  chunk_06.context.md  chunk_06.md  chunk_07.context.md  chunk_07.md  chunk_08.context.md  chunk_08.md  chunk_09.context.md  chunk_09.md  chunk_10.context.md  chunk_10.md  chunk_11.context.md  chunk_11.md  index.json
book_source/: old_dragonbeard_original_chinese.txt  the_monkeys_paw.txt
book_source/old_dragonbeard_chunks/: chunk_01.txt  chunk_02.txt  chunk_03.txt  chunk_04.txt  chunk_05.txt  chunk_06.txt  chunk_07.txt  chunk_08.txt  manifest.json
inferno_genz_output/: canto_01.md  canto_02.md  canto_03.md  canto_04.md  canto_05.md  index.json
inferno_source/: canto_01.txt  canto_02.txt  canto_03.txt  canto_04.txt  canto_05.txt  canto_06.txt  canto_07.txt  canto_08.txt  canto_09.txt  canto_10.txt  canto_11.txt  canto_12.txt  canto_13.txt  canto_14.txt  canto_15.txt  canto_16.txt  canto_17.txt  canto_18.txt  canto_19.txt  canto_20.txt
(+12 files in other folders)
